--- a/HappyBox/HappyBox/HappyBox-Info.plist
+++ b/HappyBox/HappyBox/HappyBox-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.vasilii.kasnitski.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.vasilii.kasnitski.happybox</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -39,5 +39,20 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb136875329780383</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>136875329780383</string>
 </dict>
 </plist>
