--- a/HappyBox/HappyBox/Resources/Settings.bundle/Root.plist
+++ b/HappyBox/HappyBox/Resources/Settings.bundle/Root.plist
@@ -92,6 +92,30 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
+		<dict>
+			<key>Title</key>
+			<string>STATISTICS:</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>AutocapitalizationType</key>
+			<string>None</string>
+			<key>AutocorrectionType</key>
+			<string>No</string>
+			<key>DefaultValue</key>
+			<string>1122</string>
+			<key>IsSecure</key>
+			<false/>
+			<key>Key</key>
+			<string>statistics_password</string>
+			<key>KeyboardType</key>
+			<string>NumberPad</string>
+			<key>Title</key>
+			<string>Password:</string>
+			<key>Type</key>
+			<string>PSTextFieldSpecifier</string>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
