--- a/HappyBox/HappyBox/Resources/Settings.bundle/Root.plist
+++ b/HappyBox/HappyBox/Resources/Settings.bundle/Root.plist
@@ -16,7 +16,7 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 			<key>DefaultValue</key>
-			<string>http://192.168.1.1</string>
+			<string>192.168.1.4</string>
 			<key>IsSecure</key>
 			<false/>
 			<key>Key</key>
