--- a/HappyBox/HappyBox/HappyBox-Info.plist
+++ b/HappyBox/HappyBox/HappyBox-Info.plist
@@ -8,8 +8,12 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.vasilii.kasnitski.happybox</string>
+	<string>com.kohno.happybox</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -34,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3</string>
 	<key>FacebookAppID</key>
 	<string>244413002426459</string>
 	<key>LSRequiresIPhoneOS</key>
